PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2016, PHP 7.1.0

- Core:
  . Fixed bug #62210 (Exceptions can leak temporary variables). (Dmitry, Bob)
  . Fixed bug #69989 (Generators don't participate in cycle GC). (Nikita)
  . Fixed buf #71572 (String offset assignment from an empty string inserts
    null byte). (Francois)
  . Implemented the RFC `Support Class Constant Visibility`. (Sean DuBois,
    Reeze Xia, Dmitry)
  . Added void return type. (Andrea)
  . Added support for negative string offsets in string offset syntax and
    various string functions. (Francois)
  . Added a form of the list() construct where keys can be specified. (Andrea)

- FTP:
  . Implemented FR #55651 (Option to ignore the returned FTP PASV address).
    (abrender at elitehosts dot com)

- Hash:
  . Added SHA3 fixed mode algorithms (224, 256, 384, and 512 bit). (Sara)

- JSON:
  . Escaped U+2028 and U+2029 when JSON_UNESCAPED_UNICODE is supplied as
    json_encode options and added JSON_UNESCAPED_LINE_TERMINATORS to restore
    the previous behaviour. (Eddie Kohler)

- PDO_Firebird:
  . Fixed bug #60052 (Integer returned as a 64bit integer on X86_64). (Mariuz)

- Pgsql:
  . Implemented FR #31021 (pg_last_notice() is needed to get all notice
    messages). (Yasuo)
  . Implemented FR #48532 (Allow pg_fetch_all() to index numerically). (Yasuo)

- Session:
  . Improved fix for bug #68063 (Empty session IDs do still start sessions).
    (Yasuo)
  . Fixed bug #71038 (session_start() returns TRUE on failure).
    Session save handlers must return 'string' always for successful read.
    i.e. Non-existing session read must return empty string. PHP 7.0 is made
    not to tolerate buggy return value. (Yasuo)
  . Fixed bug #71394 (session_regenerate_id() must close opened session on
    errors). (Yasuo)

- SQLite3: